--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           fetch-depth: 0
           fetch-tags: true
-      - run: ./mill site.siteGen
+      - run: ./millw site.siteGen
       - name: Setup Pages
         uses: actions/configure-pages@main
       - uses: actions/upload-artifact@main
